--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2898,7 +2898,7 @@ input, select, textarea {
 		input[type="reset"].primary,
 		input[type="button"].primary,
 		.button.primary {
-			background-color: #e44c65;
+			background-color: #1e3463;
 			box-shadow: none;
 			color: #ffffff !important;
 		}
@@ -2907,14 +2907,14 @@ input, select, textarea {
 			input[type="reset"].primary:hover,
 			input[type="button"].primary:hover,
 			.button.primary:hover {
-				background-color: #e76278;
+				background-color: #5881d8;
 			}
 
 			input[type="submit"].primary:active,
 			input[type="reset"].primary:active,
 			input[type="button"].primary:active,
 			.button.primary:active {
-				background-color: #e13652;
+				background-color: #2a62da;
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
@@ -3236,7 +3236,7 @@ input, select, textarea {
 			.wrapper.style2 input[type="button"].primary,
 			.wrapper.style2 .button.primary {
 				background-color: #ffffff;
-				color: #e44c65 !important;
+				color: #1e3463 !important;
 			}
 
 				.wrapper.style2 input[type="submit"].primary:hover, .wrapper.style2 input[type="submit"].primary:active,
@@ -3412,11 +3412,16 @@ input, select, textarea {
 
 					#header nav ul li a, #header nav ul li span {
 						border: 0;
-						color: inherit;
+						color: white;
 						display: inline-block;
 						height: inherit;
 						line-height: inherit;
 						outline: 0;
+						font-weight: bold;
+					}
+
+					#header nav ul li a:not(.button):hover {
+						color: #2a62da !important;
 					}
 
 						#header nav ul li a.button, #header nav ul li span.button {
@@ -3430,7 +3435,7 @@ input, select, textarea {
 						}
 
 					#header nav ul li.active > a, #header nav ul li.active > span {
-						color: #e44c65;
+						color: #1e3463;
 					}
 
 					#header nav ul li > ul {
@@ -3446,6 +3451,24 @@ input, select, textarea {
 		box-shadow: none;
 		position: absolute;
 	}
+
+/* Logo */
+
+	#logo {
+		padding-top: 12px;
+		padding-bottom: 12px;
+		padding-right: 21px;
+		padding-left: 21px;
+		margin: 15px;
+		background-color: rgba(255, 255, 255, 0.863);
+		height: min-content;
+		width: min-content;
+		border-radius: 12px;
+	}
+		#logo img {
+			height: 54px;
+			vertical-align: middle;
+		}
 
 /* Banner */
 
@@ -3471,10 +3494,10 @@ input, select, textarea {
 		}
 
 		#banner:after {
-			background-image: -moz-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-			background-image: -webkit-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-			background-image: -ms-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-			background-image: linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
+			background-image: -moz-linear-gradient(top, rgba(23, 24, 32, 0.90), rgba(23, 24, 32, 0.54)), url("images/overlay.png");;
+			background-image: -webkit-linear-gradient(top, rgba(23, 24, 32, 0.90), rgba(23, 24, 32, 0.54)), url("images/overlay.png");;
+			background-image: -ms-linear-gradient(top, rgba(23, 24, 32, 0.90), rgba(23, 24, 32, 0.54)), url("images/overlay.png");;
+			background-image: linear-gradient(top, rgba(23, 24, 32, 0.90), rgba(23, 24, 32, 0.54)), url("images/overlay.png");;
 			content: '';
 			display: block;
 			height: 100%;
@@ -3899,6 +3922,14 @@ input, select, textarea {
 					line-height: 44px;
 					text-align: center;
 				}
+					
+					#titleBar .title img {
+						height: 39px;
+						vertical-align: middle;
+						padding: 3px;
+						background-color: rgba(255, 255, 255, 0.863);
+						border-radius: 3px;
+					}
 
 					#titleBar .title a {
 						color: inherit;
@@ -3930,7 +3961,7 @@ input, select, textarea {
 					}
 
 					#titleBar .toggle:before {
-						background: #e44c65;
+						background: #1e3463;
 						color: rgba(255, 255, 255, 0.5);
 						content: '\f0c9';
 						display: block;
