--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2186,7 +2186,7 @@ input, select, textarea {
 	}
 
 		header.major:after {
-			background: #e44c65;
+			background: #1e3463;
 			content: '';
 			display: inline-block;
 			height: 0.2em;
@@ -3201,7 +3201,7 @@ input, select, textarea {
 	}
 
 		.wrapper.style2 {
-			background: #e44c65;
+			background: #1e3463;
 		}
 
 			.wrapper.style2 input[type="text"]:focus,
@@ -3561,6 +3561,19 @@ input, select, textarea {
 		background-attachment: scroll;
 	}
 
+	.last-links {
+		list-style-type: none;
+	}
+	.last-links a {
+		color: white !important;
+		font-weight: bold;
+	}
+
+	.last-links a:hover {
+		color: white !important;
+		font-weight: bold;
+	}
+
 /* Footer */
 
 	#footer {
@@ -3615,7 +3628,13 @@ input, select, textarea {
 				}
 
 				#footer .copyright li a {
-					color: inherit;
+					color: white;
+					font-weight: bold;
+				}
+				
+				#footer .copyright li a:hover {
+					color: blue;
+					font-weight: bold;
 				}
 
 /* XLarge */
