--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -131,6 +131,7 @@ input, select, textarea {
 
 	p {
 		margin: 0 0 2em 0;
+		font-weight: bold;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -3083,7 +3084,7 @@ input, select, textarea {
 			-webkit-transition: -webkit-transform 1s ease, opacity 1s ease;
 			-ms-transition: -ms-transform 1s ease, opacity 1s ease;
 			transition: transform 1s ease, opacity 1s ease;
-			background: rgba(23, 24, 32, 0.95);
+			background: rgba(30, 52, 99, 0.911);
 			border-style: solid;
 			opacity: 1;
 			position: absolute;
@@ -3139,7 +3140,7 @@ input, select, textarea {
 		}
 
 		.spotlight.style1 .content {
-			border-color: #e44c65;
+			border-color: #fedd10;
 		}
 
 		.spotlight.style2 .content {
@@ -3412,7 +3413,7 @@ input, select, textarea {
 
 					#header nav ul li a, #header nav ul li span {
 						border: 0;
-						color: white;
+						color: #1e3463;
 						display: inline-block;
 						height: inherit;
 						line-height: inherit;
@@ -3455,18 +3456,17 @@ input, select, textarea {
 /* Logo */
 
 	#logo {
-		padding-top: 12px;
-		padding-bottom: 12px;
+		padding-top: 3px;
+		padding-bottom: 3px;
 		padding-right: 21px;
 		padding-left: 21px;
-		margin: 15px;
-		background-color: rgba(255, 255, 255, 0.863);
+		/* background-color: rgba(255, 255, 255, 0.863);
 		height: min-content;
 		width: min-content;
-		border-radius: 12px;
+		border-radius: 12px; */
 	}
 		#logo img {
-			height: 54px;
+			height: 39px;
 			vertical-align: middle;
 		}
 
@@ -3494,10 +3494,10 @@ input, select, textarea {
 		}
 
 		#banner:after {
-			background-image: -moz-linear-gradient(top, rgba(12, 12, 15, 0.96), rgba(12, 12, 15, 0.81)), url("images/overlay.png");;
-			background-image: -webkit-linear-gradient(top, rgba(12, 12, 15, 0.96), rgba(12, 12, 15, 0.81)), url("images/overlay.png");;
-			background-image: -ms-linear-gradient(top, rgba(12, 12, 15, 0.96), rgba(12, 12, 15, 0.81)), url("images/overlay.png");;
-			background-image: linear-gradient(top, rgba(12, 12, 15, 0.96), rgba(12, 12, 15, 0.81)), url("images/overlay.png");;
+			background-image: -moz-linear-gradient(top, rgba(12, 12, 15, 0.0), rgba(12, 12, 15, 0.0)), url("images/overlay.png");;
+			background-image: -webkit-linear-gradient(top, rgba(12, 12, 15, 0.0), rgba(12, 12, 15, 0.0)), url("images/overlay.png");;
+			background-image: -ms-linear-gradient(top, rgba(12, 12, 15, 0.0), rgba(12, 12, 15, 0.0)), url("images/overlay.png");;
+			background-image: linear-gradient(top, rgba(12, 12, 15, 0.0), rgba(12, 12, 15, 0.0)), url("images/overlay.png");;
 			content: '';
 			display: block;
 			height: 100%;
@@ -4096,6 +4096,9 @@ input, select, textarea {
 				-ms-transform: translateX(0);
 				transform: translateX(0);
 			}
+
+			/* logistica container */
+			
 
 		/* Footer */
 
